# q-learning_taxi-v3

./: .gitignore  README.md  actions.py  config.json  config.py  main.ipynb  optimize.py  params.json  pyproject.toml  q_table.npy  requirements.txt  use.py
