[project]
name = "qlearn-taxi-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[toy-text]>=1.2.0",
    "numpy>=2.3.2",
    "optuna>=4.4.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
